# glib3

./: CMakeLists.txt  INSTALL.md  README.md  foo.h.in
data/bb/src/: CMakeLists.txt  bub.cpp  bub.h  bubble.cpp  bubble.h  factories.cpp  factories.h  jump.cpp  jump.h  turnaround.cpp  zenchan.cpp  zenchan.h
src/: CMakeLists.txt  config.json
src/alglib/: CMakeLists.txt  alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
src/gfx/: CMakeLists.txt  activity.cpp  activityfactory.cpp  aiwalk.cpp  animate.cpp  app.cpp  assetman.cpp  basicfactory.cpp  basicstate.cpp  billboard.cpp  bounds.cpp  boxedmodel.cpp  camera.cpp  changestate.cpp  collider.cpp  collisioncheck.cpp  collisionengine.cpp  collisionengine3d.cpp  collisionresponse.cpp  compfactories.cpp  component.cpp  compositemodel.cpp  contour.cpp  controller2d.cpp  cursor.cpp  delay.cpp  depth.cpp  dynamicworld.cpp  engine.cpp  entity.cpp  entitywrapper.cpp  factories.cpp  factory.cpp  follow.cpp  font.cpp  framechangehandler.cpp  hit.cpp  hotspot.cpp  icollisionengine.cpp  idle2d.cpp  (+48 more)
src/gfx/activities/: animate.cpp  blink.cpp  callfunc.cpp  cambounds.cpp  changeroom.cpp  changestate.cpp  collisioncheck.cpp  delay.cpp  enablekey.cpp  flip.cpp  move.cpp  repeat.cpp  rotate.cpp  scale.cpp  scriptactions.cpp  scroll.cpp  sequence.cpp  setactive.cpp  setdemo.cpp  setmodel.cpp  setstate.cpp  showmessage.cpp  targetactivity.cpp  treemove.cpp  virtualkey.cpp
src/gfx/components/: animator.cpp  basicrenderer.cpp  billboard.cpp  collider.cpp  controller2d.cpp  controller3d.cpp  cursor.cpp  depth.cpp  depth25.cpp  dynamics2d.cpp  ellipsemover.cpp  extstatemachine.cpp  follow.cpp  follow3d.cpp  fpscounter.cpp  garbagecollect.cpp  hotspot.cpp  icollider.cpp  inputmethod.cpp  keyinput.cpp  lambdahotspot.cpp  light.cpp  luahook.cpp  luakeylistener.cpp  mover.cpp  multicollider.cpp  parallax.cpp  parallax3d.cpp  platform.cpp  raycastcontroller.cpp  relativepos.cpp  renderer.cpp  scripthotspot.cpp  shadow.cpp  simpleanimator.cpp  skeletalanimator.cpp  skeletalcollider.cpp  skeletalrenderer.cpp  smartcollider.cpp  spriteanimator.cpp  (+6 more)
src/gfx/entities/: heightmap.cpp  listview.cpp  textview.cpp
src/gfx/factories/: activityfactories.cpp  assetfactories.cpp  camerafactories.cpp  compfactories.cpp  entityfactories.cpp  parallaxbg.cpp  prim3d.cpp  shapefactories.cpp  skeleton.cpp  spritefactory.cpp  trapezoid.cpp
src/gfx/lua/: luatable.cpp  luawrapper.cpp
src/gfx/math/: box.cpp  circle.cpp  closest.cpp  compound.cpp  ellipse.cpp  funcs.cpp  geom.cpp  geomalgo.cpp  integral.cpp  intersect.cpp  isoline.cpp  line.cpp  piecewise.cpp  poly.cpp  polyline.cpp  raycast.cpp  raycast3d.cpp  rect.cpp  shapes3d.cpp  shortestpath.cpp  util.cpp
src/gfx/model/: basicmodel.cpp  combomodel.cpp  model3D.cpp  skeletalmodel.cpp  spritemodel.cpp  textmodel.cpp
src/gfx/model3D/: model3D.cpp
src/gfx/states/: animinitializer.cpp  hit25.cpp  jump25.cpp  luainitializer.cpp  simple.cpp  walk25.cpp
src/graph/: CMakeLists.txt  circle.cpp  closest.cpp  compound.cpp  ellipse.cpp  geom.cpp  geomalgo.cpp  graph.cpp  intersect.cpp  line.cpp  poly.cpp  polyline.cpp  raycast.cpp  rect.cpp  shape.cpp  shortestpath.cpp
src/mogo/: CMakeLists.txt  copy_assets.cmake  main.cpp
src/monkey/: CMakeLists.txt  activity.cpp  activityfactory.cpp  aiwalk.cpp  assetman.cpp  bounds.cpp  box2dworld.cpp  boxedmodel.cpp  callfunc.cpp  cam25.cpp  camera.cpp  changeroom.cpp  collisionengine.cpp  collisionengine3d.cpp  collisionresponse.cpp  compfactories.cpp  component.cpp  compositemodel.cpp  contour.cpp  dyloader.cpp  dynamicworld.cpp  enableblock.cpp  engine.cpp  entity.cpp  entitywrapper.cpp  factories.cpp  factory.cpp  fill.cpp  font.cpp  funcs.cpp  hit.cpp  hotspot.cpp  ianimator.cpp  icollisionengine.cpp  imesh.cpp  info.cpp  itable.cpp  keyboard.cpp  keyboardcontroller.cpp  lightshader.cpp  (+47 more)
src/monkey/activities/: animate.cpp  blink.cpp  callfunc.cpp  cambounds.cpp  changeroom.cpp  changestate.cpp  collisioncheck.cpp  delay.cpp  enableblock.cpp  enablekey.cpp  flip.cpp  freemove.cpp  move.cpp  repeat.cpp  rotate.cpp  runscript.cpp  say.cpp  scale.cpp  scriptactions.cpp  scroll.cpp  sequence.cpp  setactive.cpp  setdemo.cpp  setmodel.cpp  setstate.cpp  showmessage.cpp  split.cpp  targetactivity.cpp  treemove.cpp  turn.cpp  turnsci.cpp  virtualkey.cpp  waitforkey.cpp  walk.cpp  walksci.cpp
src/monkey/assets/: font.cpp  model.cpp  tex.cpp
src/monkey/bullet/: bulletworld.cpp  rigidbody.cpp  shapefactory.cpp  vehicle.cpp  vehiclefollow.cpp  world.cpp
src/monkey/components/: animator.cpp  animrenderer.cpp  basicrenderer.cpp  billboard.cpp  box2dbody.cpp  box2dcc.cpp  box2dcc2.cpp  box2dcontrollerbase.cpp  box2dlistener.cpp  (+59 more)
src/phy/: CMakeLists.txt  btshapewrapper.cpp  btshapewrapper.h  bulletengine.cpp  bulletengine.h  c3d.cpp  c3d.h  factories.cpp  factories.h  main.cpp  phyfactory.cpp  rigidbody.cpp  rigidbody.h  road.cpp
src/pippo/: CMakeLists.txt  main.cpp
src/pippolib/: CMakeLists.txt  pino.cpp
src/platformer/: CMakeLists.txt  characterstatemachine.cpp  duck.cpp  enemyinput.cpp  extend.cpp  factories.cpp  jump.cpp  main.cpp  platformerfactory.cpp  walk.cpp  walkanim.cpp  walkanim.h
src/prova/: CMakeLists.txt  example.cpp  example.h  from distutils.core import setup  funx.cpp  install.sh  rect.cpp  rect.h  setup.py.in
src/racer/: CMakeLists.txt  extend.cpp
src/scumm/: CMakeLists.txt  extend.cpp  factories.cpp  factories.h  lua.cpp  main.cpp  monkeyfactory.cpp
src/scumm2/: factories.cpp  main.cpp  monkeyactivityfactory.cpp
src/smb/: CMakeLists.txt  factories.cpp  factories.h  main.cpp  platformerfactory.cpp
src/spriteview/: CMakeLists.txt  main.cpp  mousecontrol.cpp  sv.cpp  svfactory.cpp
src/test/: CMakeLists.txt  controller.cpp  io.cpp  main.cpp  railway.cpp  resource.cpp  solution.cpp  tcs.cpp  testgfx.cpp  timeformatter.cpp
src/xml/: CMakeLists.txt  CMakeLists.txt.save  tinyxml2.cpp
(+2049 files in other folders)
