cmake_minimum_required(VERSION 3.3)

# dependent libraries
#add_subdirectory(graph)
#add_subdirectory(xml)
add_subdirectory(alglib)
add_subdirectory(monkey)
#add_subdirectory(test)
add_subdirectory(scumm)
add_subdirectory(smb)
#add_subdirectory(platformer)
#add_subdirectory(phy)
#add_subdirectory(spriteview)
